docs/v1/registry-properties-registry-prefix.md
# Registry prefix Schema

```txt
https://weme-ui.github.io/schema/registry.schema.json#/properties/prefix
```

Default prefix for added components of the registry.

| Abstract            | Extensible | Status         | Identifiable            | Custom Properties | Additional Properties | Access Restrictions | Defined In                                                                     |
| :------------------ | :--------- | :------------- | :---------------------- | :---------------- | :-------------------- | :------------------ | :----------------------------------------------------------------------------- |
| Can be instantiated | No         | Unknown status | Unknown identifiability | Forbidden         | Allowed               | none                | [registry.schema.json\*](../../v1/registry.schema.json "open original schema") |

## prefix Type

`string` ([Registry prefix](registry-properties-registry-prefix.md))

## prefix Examples

```json
"ui"
```
